# BIO_RAG_Medical_drug

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md
backend/: pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: __init__.py  admin.py  chat.py  documents.py  drugs.py  graph.py  search.py
backend/app/core/: config.py
backend/app/db/: __init__.py  base.py  init_db.py  session.py
backend/app/models/: __init__.py  conversation.py  disease.py  drug.py  search_log.py
backend/app/schemas/: __init__.py  chat.py  drug.py  graph.py  response.py  search.py
backend/app/services/: __init__.py  bm25_search.py  data_preprocessor.py  data_sync.py  disease_vector_db.py  document_service.py  embedding.py  llm_service.py  memory_service.py  milvus_service.py  neo4j_service.py  qdrant_service.py  rag_engine.py  splade_service.py  vector_db.py
backend/scripts/: build_index.py  seed_disease_data.py  seed_sample_data.py  sync_data.py  sync_neo4j.py
backend/tests/: conftest.py  test_api.py  test_bm25_search.py  test_neo4j_service.py  test_services.py
docker/: Dockerfile.backend  Dockerfile.frontend  docker-compose.yml
frontend/: index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/ai/: AIResponse.tsx
frontend/src/components/common/: Disclaimer.tsx  Loading.tsx
frontend/src/components/drug/: DrugCard.tsx  DrugList.tsx
frontend/src/components/layout/: Footer.tsx  Header.tsx  Layout.tsx
frontend/src/components/search/: SearchForm.tsx
frontend/src/components/visualization/: RAGProcessDiagram.tsx  VectorSpace3D.tsx
frontend/src/context/: MemoryContext.tsx  SearchContext.tsx
frontend/src/hooks/: useChat.ts  useDrug.ts  useSearch.ts
frontend/src/pages/: AdminPage.tsx  DrugDetailPage.tsx  HomePage.tsx  RAGProcessPage.tsx  SearchResultsPage.tsx  VectorSpacePage.tsx
frontend/src/services/: adminService.ts  api.ts  chatService.ts  drugService.ts  searchService.ts  vectorService.ts
frontend/src/types/: api.ts  drug.ts
scripts/: build_index.py  sync_data.py
