[project]
name = "medical-rag-backend"
version = "0.1.0"
description = "Medical RAG System Backend - Drug Recommendation API"
requires-python = ">=3.11"
readme = "README.md"

dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.28.0",
    "aiosqlite>=0.19.0",
    "pgvector>=0.2.0",
    "httpx>=0.24.0",
    "openai>=1.0.0",
    "cohere>=5.0.0",
    "python-dotenv>=1.0.0",
    "alembic>=1.12.0",
    "slowapi>=0.1.8",
    "rank-bm25>=0.2.2",
    # Milvus + BGE-M3 (multilingual sparse embedding)
    "pymilvus>=2.4.0",
    "transformers>=4.36.0",
    "torch>=2.1.0",
    "sentence-transformers>=2.2.0",
    "FlagEmbedding>=1.2.0",
    # Neo4j Graph Database
    "neo4j>=5.0.0",
    # Redis for caching and memory
    "redis>=5.0.0",
    # DuckDB for lightweight memory backend
    "duckdb>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "httpx>=0.24.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["tests*", "data*", "alembic*", "scripts*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
